--- a/lib/content/template.html
+++ b/lib/content/template.html
@@ -20,7 +20,7 @@
     }
     .header {
       text-align: center;
-      background-color: #007BFF;
+      background-color: #dbbb7d;
       color: white;
       padding: 20px;
       border-radius: 8px 8px 0 0;
@@ -49,14 +49,14 @@
 <body>
   <div class="email-container">
     <div class="header">
-      <h1>Ihre Überschrift hier</h1>
+      <h1>RoyalZSoftware Newsletter</h1>
     </div>
     <div class="content">
         %%CONTENT%%
     </div>
     <div class="footer">
-      &copy; 2025 Ihr Unternehmen – Alle Rechte vorbehalten<br>
-      <a href="#">Abmelden</a> | <a href="#">Impressum</a>
+      &copy; 2025 RoyalZSoftware – All rights reserved<br>
+      <a href="#">Unsubscribe</a> | <a href="#">Imprint</a>
     </div>
   </div>
 </body>
